# zero_mind

./: .gitignore  README.md  arc_policy.py  colab_setup.sh  play_arc.py  pyproject.toml  requirements.txt  train.py  train_single_task.py  visualize_run.py
arc_env/: __init__.py  augment.py  curriculum.py  env.py  gen_env.py  policy.py  renderer.py  rewards.py
configs/: arc_2k_aug.yaml  arc_test_eval.yaml  arc_test_eval_mps.yaml  base.yaml  colab_cuda.yaml  colab_eval.yaml  easy_sim_curriculum.yaml  quick_arc_train.yaml  quick_sim.yaml  quick_sim_v2.yaml  serious_arc_train.yaml  serious_arc_v2.yaml
scripts/: arc_data_report.py  build_augmented_arc_episodes.py  eval_taskwise.py  run_eval.py  run_infer.py  run_train.py  run_train_with_eval.py  summarize_metrics.py  visualize_inference.py
src/data/: arc_simulator.py  arc_stream.py
src/models/: cross_attention_rule.py  decoder_refine.py  ijepa_rope.py  mamba_block.py  reasoner_trm_hrm.py  router.py  symbolic_primitives.py  unified_model.py
src/training/: inference.py  losses.py  unified_loop.py
src/utils/: grids.py
tests/: test_inference_path.py  test_unified_loop.py
